<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HOXChess</string>
    <string name="ai_label">AI</string>
    <string name="you_label">You</string>
    <string name="action_settings">Settings</string>
    <string name="action_reverse_view">Reverse View</string>
    <string name="action_new">New Table</string>
    <string name="action_close">Close Table</string>
    <string name="action_draw">Offer Draw</string>
    <string name="action_resign">Offer Resign</string>
    <string name="action_reset">Reset Table</string>
    <string name="action_play_online">Play Online</string>
    <string name="action_logout">Logout</string>
    <string name="board_alt">Board</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_tables">Tables</string>
    <string name="title_activity_chat">Chat</string>
        
    <string-array name="AILevel_entries">
	    <item>Easy</item>
	    <item>Medium</item>
	    <item>Difficult</item>
    </string-array>
    
    <string-array name="AILevel_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="AILevel_default">1</string>
    
    <string name="ai_level">AI Level</string>
    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_difficult">Difficult</string>
    <string name="ai_label_easy">AI (Easy)</string>
    <string name="ai_label_medium">AI (Medium)</string>
    <string name="ai_label_difficult">AI (Difficult)</string>
    
    <string name="playxiangqi_account">PlayXiangqi Account</string>
    <string name="playxiangqi_login_with_account">Login with Account</string>
    <string name="playxiangqi_username">Username</string>
    <string name="playxiangqi_password">Password</string>
    <string name="password_masked_value">*****</string>
    <string name="playxiangqi_website">Visit: <a href="http://www.playxiangqi.com/index.php?page=register">PlayXiangqi.com</a></string>
    <string name="login_error_wrong_username">Username is wrong</string>
    <string name="login_error_wrong_password">Password is wrong</string>
    <string name="login_error_general_error">Failed to login</string>
    
    <string name="replay_prev">Prev</string>
    <string name="replay_next">Next</string>
    
    <string name="replay_text">Replay %1$d / %2$d</string>
    
    <string name="button_play_black">Play BLACK</string>
    <string name="button_play_red">Play RED</string>
    
    <string name="label_game_time_zero">00:00</string>
    <string name="label_move_time_zero">0:00</string>
    
    <string name="title_table">#%1$s</string>
    <string name="notifications">Show Notifications</string>
    <string name="chat_button_send">Send</string>
    <string name="chat_empty_text">No message</string>
    
    <string name="about_title">About</string>
    <string name="version">Version 1.0</string>
    <string name="copyright">Copyright \u00A9 2015 PlayXiangqi</string>
    
    <string name="about_html">
<![CDATA[
<body>
<h3>HOXChess by PlayXiangqi</h3>
<div>
  <b>HOXChess by PlayXiangqi</b> is an open source XiangQi application for iOS and Android devices,
  hosted on <a href="https://github.com/huygithub/hoxChess">https://github.com/huygithub/hoxChess</a>.
  <p>Please contact us at <a href="mailto:hoxchess@playxiangqi.com">hoxchess@PlayXiangqi.com</a></p>
</div>

<h3>Acknowledgement</h3>
<div>
  <p><b>HaQiKi D</b> is an AI engine written by H.G. Muller at
     <a href="http://home.hccnet.nl/h.g.muller/XQhaqikid.html">http://home.hccnet.nl/h.g.muller</a></p>
</div>
</body>
]]>
    </string>
    
</resources>
