<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- New, should appear as action button -->
    <item android:id="@+id/action_new_table"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          android:showAsAction="always" />

    <item android:id="@+id/action_play_online"
          android:icon="@drawable/ic_action_web_site"
          android:title="@string/action_play_online"
          android:showAsAction="always" />
    
    <!--  Notification item -->
    <item
        android:id="@+id/badge"
        android:title="@string/notifications"
        android:actionLayout="@layout/msg_update_count"
        android:icon="@drawable/shape_notification"
        android:showAsAction="always">
    </item>
    
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />

    <!-- 
    <item android:id="@+id/action_reverse_view"
          android:title="@string/action_reverse_view"
          android:showAsAction="never" />
    -->
    
    <item android:id="@+id/action_close_table"
          android:title="@string/action_close"
          android:showAsAction="never" />

    <item android:id="@+id/action_offer_draw"
          android:title="@string/action_draw"
          android:showAsAction="never" />

    <item android:id="@+id/action_offer_resign"
          android:title="@string/action_resign"
          android:showAsAction="never" />

    <item android:id="@+id/action_reset_table"
          android:title="@string/action_reset"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:showAsAction="never" />
    
</menu>
