<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.playxiangqi.hoxchess.SettingsActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_level" />

    <RadioGroup
        android:id="@+id/radiogroup_ai_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:orientation="vertical" >

	    <RadioButton android:id="@+id/radio_level_easy"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level_easy" />
	    <RadioButton android:id="@+id/radio_level_medium"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level_medium" />
        <RadioButton android:id="@+id/radio_level_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_difficult" />
    </RadioGroup>
    
</LinearLayout>
