<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.playxiangqi.hoxchess.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left" >
    
	    <TextView
	        android:id="@+id/top_player_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ai_label" />
	    
        <Button
              android:id="@+id/top_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/button_play_black"
              android:textSize="12sp"
              android:onClick="onTopButtonClick" />  
    </LinearLayout>
    
    <com.playxiangqi.hoxchess.BoardView
        android:id="@+id/board_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/board_alt" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left" >
    
        <TextView
            android:id="@+id/bottom_player_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_label" />
        
        <Button
              android:id="@+id/bottom_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/button_play_red"
              android:textSize="12sp"
              android:onClick="onBottomButtonClick" />   
    </LinearLayout>
    
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center" >

        <ImageButton
              android:id="@+id/replay_begin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:contentDescription="@string/replay_begin"
              android:src="@drawable/ic_action_previous"
              android:onClick="onReplayBegin" />
        
        <ImageButton
              android:id="@+id/replay_previous"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:contentDescription="@string/replay_prev"
              android:src="@drawable/ic_action_previous_item"
              android:onClick="onReplayPrevious" />

        <ImageButton
              android:id="@+id/replay_next"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:contentDescription="@string/replay_next"
              android:src="@drawable/ic_action_next_item"
              android:onClick="onReplayNext" />
        
        <ImageButton
              android:id="@+id/replay_end"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:contentDescription="@string/replay_end"
              android:src="@drawable/ic_action_next"
              android:onClick="onReplayEnd" />
            
    </LinearLayout>
    
</LinearLayout>
